deployments/challenge2-userjava.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-userjava-deployment
  labels:
    app: tripinsights-userjava
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tripinsights-userjava
  template:
    metadata:
      labels:
        app: tripinsights-userjava
    spec:
      containers:
        - name: tripinsights-userjava
          image: registryztd0636.azurecr.io/tripinsights/userjava:1.0
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tripinsights-userjava
  name: tripinsights-userjava-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: tripinsights-userjava
