deployments/challenge4-tripview.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: web
  name: tripinsights-tripviewer-deployment
  labels:
    app: tripinsights-tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-tripviewer
  template:
    metadata:
      labels:
        app: tripinsights-tripviewer
    spec:
      containers:
        - name: tripinsights-tripviewer
          image: registryztd0636.azurecr.io/tripinsights/tripviewer:1.0
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: web
  labels:
    app: tripinsights-tripviewer
  name: tripinsights-tripviewer-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: tripinsights-tripviewer
