deployments/challenge4-ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: web
  name: tripinsights-ingress-web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tripinsights-tripviewer-service
            port:
              number: 80
